Kap örgüsü SCSS hatası giderildi
@extend işlevi @media içine başka @media altından veri çekememekteydi. Bu nedenle her media için özelleştirilmiş isimlendirme yapıldı.

örneğin: %c-3 iken %#{$ekran}c-3 olarak tanımlandı.

--- a/assets/deveb-s1n0/_kap-orgusu.scss
+++ b/assets/deveb-s1n0/_kap-orgusu.scss
@@ -1,5 +1,5 @@
 /*!
- * Kap Örgüsü s1.0.3
+ * Kap Örgüsü s1.0.4
  * 
  * Bu örgü "parça düzeni", "genleşme düzeni", "sıralama düzeni", "aralık düzeni",
  * "dizem düzeni", "konumlama" özellikleriyle oluşturulmuştur.
@@ -9,6 +9,8 @@
 
 
 /* Parça Düzeni */
+$p: 24; /* parça düzeni ayarı */
+
 @mixin parça-düzeni($ekran){
 
   /***
@@ -34,14 +36,6 @@
     133 satır ile yerden kazanç sağlandı.
   ***/
 
-
-  /* Parça değişkenleri */
-
-
-  /*************************************************/
-
-  $p: 24; /* parça düzeni ayarı */
-
   $i: 1;  $j: 0;
 
   @while $i <= $p {
@@ -53,26 +47,25 @@
     $i: $i + 4;    $j: $j + 1;
   }
 
-  %c-3 {--c: 3}
-  %c-2 {--c: 2}
-  %c-1 {--c: 1}
+  %#{$ekran}c-3 {--c: 3}
+  %#{$ekran}c-2 {--c: 2}
+  %#{$ekran}c-1 {--c: 1}
 
   $i: 1;
   @while $i <= $p {
       [data-#{$ekran}~="#{$i}"], {
-          @extend %c-3;
+          @extend %#{$ekran}c-3;
       }
       [data-#{$ekran}~="#{$i+1}"], {
-          @extend %c-2;
+          @extend %#{$ekran}c-2;
       }
       [data-#{$ekran}~="#{$i+2}"], {
-          @extend %c-1;
+          @extend %#{$ekran}c-1;
       }
       $i: $i + 4;
   }
 
-
-  /* parçalık *************** */
+  /* parçalık */
 
   $i: 1;  $j: 0;
 
@@ -85,88 +78,23 @@
     $i: $i + 4;    $j: $j + 1;
   }
 
-  %d-3 {--d: 3}
-  %d-2 {--d: 2}
-  %d-1 {--d: 1}
+  %#{$ekran}d-3 {--d: 3}
+  %#{$ekran}d-2 {--d: 2}
+  %#{$ekran}d-1 {--d: 1}
 
   $i: 1;
   @while $i <= $p {
       [data-#{$ekran}~="#{$i}p"], {
-          @extend %d-3;
+          @extend %#{$ekran}d-3;
       }
       [data-#{$ekran}~="#{$i+1}p"], {
-          @extend %d-2;
+          @extend %#{$ekran}d-2;
       }
       [data-#{$ekran}~="#{$i+2}p"], {
-          @extend %d-1;
+          @extend %#{$ekran}d-1;
       }
       $i: $i + 4;
   }
-
-  /*************************************************/
-
-  [data-#{$ekran}~="1"],[data-#{$ekran}~="2"],[data-#{$ekran}~="3"],[data-#{$ekran}~="4"]
-  {--a: 1; --c: 0}
-
-  [data-#{$ekran}~="5"],[data-#{$ekran}~="6"],[data-#{$ekran}~="7"],[data-#{$ekran}~="8"]
-  {--a: 2; --c: 0}
-
-  [data-#{$ekran}~="9"],[data-#{$ekran}~="10"],[data-#{$ekran}~="11"],[data-#{$ekran}~="12"]
-  {--a: 3; --c: 0}
-
-  [data-#{$ekran}~="13"],[data-#{$ekran}~="14"],[data-#{$ekran}~="15"],[data-#{$ekran}~="16"]
-  {--a: 4; --c: 0}
-
-  [data-#{$ekran}~="17"],[data-#{$ekran}~="18"],[data-#{$ekran}~="19"],[data-#{$ekran}~="20"]
-  {--a: 5; --c: 0}
-
-  [data-#{$ekran}~="21"],[data-#{$ekran}~="22"],[data-#{$ekran}~="23"],[data-#{$ekran}~="24"]
-  {--a: 6; --c: 0}
-
-  [data-#{$ekran}~="1"],[data-#{$ekran}~="5"],[data-#{$ekran}~="9"],
-  [data-#{$ekran}~="13"],[data-#{$ekran}~="17"],[data-#{$ekran}~="21"]
-  {--c: 3}
-
-  [data-#{$ekran}~="2"],[data-#{$ekran}~="6"],[data-#{$ekran}~="10"],
-  [data-#{$ekran}~="14"],[data-#{$ekran}~="18"],[data-#{$ekran}~="22"]
-  {--c: 2}
-
-  [data-#{$ekran}~="3"],[data-#{$ekran}~="7"],[data-#{$ekran}~="11"],
-  [data-#{$ekran}~="15"],[data-#{$ekran}~="19"],[data-#{$ekran}~="23"]
-  {--c: 1}
-
-
-  /* Parçalık değişkenleri */
-
-  [data-#{$ekran}~="1p"],[data-#{$ekran}~="2p"],[data-#{$ekran}~="3p"],[data-#{$ekran}~="4p"]
-  {--b: 1; --d: 0}
-
-  [data-#{$ekran}~="5p"],[data-#{$ekran}~="6p"],[data-#{$ekran}~="7p"],[data-#{$ekran}~="8p"]
-  {--b: 2; --d: 0}
-
-  [data-#{$ekran}~="9p"],[data-#{$ekran}~="10p"],[data-#{$ekran}~="11p"],[data-#{$ekran}~="12p"]
-  {--b: 3; --d: 0}
-
-  [data-#{$ekran}~="13p"],[data-#{$ekran}~="14p"],[data-#{$ekran}~="15p"],[data-#{$ekran}~="16p"]
-  {--b: 4; --d: 0}
-
-  [data-#{$ekran}~="17p"],[data-#{$ekran}~="18p"],[data-#{$ekran}~="19p"],[data-#{$ekran}~="20p"]
-  {--b: 5; --d: 0}
-
-  [data-#{$ekran}~="21p"],[data-#{$ekran}~="22p"],[data-#{$ekran}~="23p"],[data-#{$ekran}~="24p"]
-  {--b: 6; --d: 0}
-
-  [data-#{$ekran}~="1p"],[data-#{$ekran}~="5p"],[data-#{$ekran}~="9p"],
-  [data-#{$ekran}~="13p"],[data-#{$ekran}~="17p"],[data-#{$ekran}~="21p"]
-  {--d: 3}
-
-  [data-#{$ekran}~="2p"],[data-#{$ekran}~="6p"],[data-#{$ekran}~="10p"],
-  [data-#{$ekran}~="14p"],[data-#{$ekran}~="18p"],[data-#{$ekran}~="22p"]
-  {--d: 2}
-
-  [data-#{$ekran}~="3p"],[data-#{$ekran}~="7p"],[data-#{$ekran}~="11p"],
-  [data-#{$ekran}~="15p"],[data-#{$ekran}~="19p"],[data-#{$ekran}~="23p"]
-  {--d: 1}
 
 
   [data-#{$ekran}][data-#{$ekran}]{
