--- a/_includes/s1n0/dallik.html
+++ b/_includes/s1n0/dallik.html
@@ -4,7 +4,7 @@
     {% assign dil = 'tr' %}
     {% assign baslangic = 'Başlangıç' %}
     {% assign kurulum = 'Kurulum' %}
-    {% assign ekran_orgusu = 'Ekran Örgüsü' %}
+    {% assign goruntuluk_orgusu = 'Görüntülük Örgüsü' %}
     {% assign kap_orgusu = 'Kap Örgüsü' %}
       {% assign parca_duzeni = 'Parça Düzeni' %}
       {% assign dizem_duzeni = 'Dizem Düzeni' %}
@@ -22,7 +22,7 @@
     {% assign dil = 'en' %}
     {% assign baslangic = 'Start' %}
     {% assign kurulum = 'Installation' %}
-    {% assign ekran_orgusu = 'Screen System' %}
+    {% assign goruntuluk_orgusu = 'Screen System' %}
     {% assign kap_orgusu = 'Grid System' %}
       {% assign parca_duzeni = 'Piece Layout' %}
       {% assign dizem_duzeni = 'Rhythm Layout' %}
@@ -48,8 +48,8 @@
     <li class="{% if page.url contains '/kurulum' %}etkin{% endif %}">
       <a href="/1.0/{{ dil }}/kurulum">{{ kurulum }}</a>
     </li>
-    <li class="{% if page.url contains '/ekran-orgusu' %}etkin{% endif %}">
-      <a href="/1.0/{{ dil }}/ekran-orgusu">{{ ekran_orgusu }}</a>
+    <li class="{% if page.url contains '/goruntuluk-orgusu' %}etkin{% endif %}">
+      <a href="/1.0/{{ dil }}/goruntuluk-orgusu">{{ ekran_orgusu }}</a>
     </li>
     <li class="{% if page.url contains '/kap-orgusu' %}etkin{% endif %}">
       <a href="/1.0/{{ dil }}/kap-orgusu">{{ kap_orgusu }}</a>
