--- a/_includes/s1n0/dallik.html
+++ b/_includes/s1n0/dallik.html
@@ -49,7 +49,7 @@
       <a href="/1.0/{{ dil }}/kurulum">{{ kurulum }}</a>
     </li>
     <li class="{% if page.url contains '/goruntuluk-orgusu' %}etkin{% endif %}">
-      <a href="/1.0/{{ dil }}/goruntuluk-orgusu">{{ ekran_orgusu }}</a>
+      <a href="/1.0/{{ dil }}/goruntuluk-orgusu">{{ goruntuluk_orgusu }}</a>
     </li>
     <li class="{% if page.url contains '/kap-orgusu' %}etkin{% endif %}">
       <a href="/1.0/{{ dil }}/kap-orgusu">{{ kap_orgusu }}</a>
