--- a/assets/deveb-s1n0/_dil-tr.scss
+++ b/assets/deveb-s1n0/_dil-tr.scss
@@ -1,7 +1,7 @@
-/* Türkçe http://www.objgen.com/json/models/nuZ   */
+// Türkçe http://www.objgen.com/json/models/nuZ
 
 $destekleme: yanlış;
-/* Ekran Örgüsü */
+// Görüntülük Örgüsü
 $gnl: gnl;
 $mnk: mnk;
 $ufk: ufk;
@@ -11,16 +11,16 @@ $byk: byk;
 $kcm: kcm;
 $dev: dev;
 
-/* Kap Örgüsü */
+// Kap Örgüsü
 $soldan: soldan;
 $sağdan: sağdan;
 $tamekran: tamekran;
 $sığ: sığ;
 
-/* Sıralama Düzeni */
+// Sıralama Düzeni
 $nc: nc;
 
-/* Konumlama - Kap Örgüsü */
+// Konumlama - Kap Örgüsü
 $sütun: sütun;
 $satır: satır;
 
@@ -71,7 +71,7 @@ $orta: o;
 $üstalt: ta;
 $solsağ: ls;
 
-/* Durumlama - Kap Örgüsü */
+// Durumlama - Kap Örgüsü
 $gizle: gizle;
 $bunu-gizle: bunu-gizle;
 $küçükleri-gizle: küçükleri-gizle;
@@ -80,7 +80,7 @@ $küçükleriyle-gizle: küçükleriyle-gizle;
 $büyükleriyle-gizle: büyükleriyle-gizle;
 $diğerlerini-gizle: diğerlerini-gizle;
 
-/* */
+//
 $aralık: aralık;
 $araları: araları;
 $oluk-çevre: oluk-çevre;
